# senior_project_new

./: package.xml  setup.cfg  setup.py
bryan_offboard/: apriltag_pose.py  bottom_april.py  bottom_cam_node.py  bottom_cam_node_listener.py  bottom_facing_cam.py  convention_testing.py  depth_cam_lateral_rgb.py  depth_cam_listener.py  depth_cam_node.py  depth_listener_new.py  drop_object.py  max_servo.py  mid_servo.py  min_servo.py  offboard_alternative_bottom_facing_rgb_lateral.py  offboard_complete.py  offboard_track_april.py  offboard_with_depth.py  pickup_from_underneath.py  test_bottom_fps.py  testtime.py
bryan_offboard/arducam_calibration/: calibration.py  camera_matrix.csv  dist.csv  undistort.py
bryan_offboard/arducam_calibration/images/: cap_images.py
bryan_offboard/depthcam/: apriltag_depth.py  apriltag_pose.py  depth_and_rgb.py  depthcam_record_both.py  syncrgbd.py
bryan_offboard/servo_control/: back_forth.py  close.py  lgpio_servo.py  mid_servo.py  min_servo.py  min_to_mid_servo.py  open.py
bryan_offboard/servo_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bryan_offboard/servo_control/log/: latest_build
launch/: bottom_apriltag_launch.py  complete_apriltag_launch.py  depth_apriltag_launch.py  new_approach_launch.py
