<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bryan_offboard</name>
  <version>0.0.0</version>
  <description>BSD-3</description>
  <maintainer email="bryan@todo.todo">bryan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>depthai</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>pupil_apriltags</exec_depend>
  <exec_depend>datetime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>